# cpython

./: .gitignore  Makefile.pre.in  README  build_vita.sh  compile_modules_vita.sh  config.site  configure  configure.ac  install_extra_modules.sh
Demo/curses/: rain.pyo.140566739640880
Demo/sockets/: echosvr.pyo.139623021141424
Include/: osdefs.h
Lib/: os.py  pydoc.py  site.py  sysconfig.py  tempfile.py  threading.py  urllib2.py  vitapath.py
Lib/plat-vita/: IN.py
Modules/: Setup  Setup.dist  faulthandler.c  fcntlmodule.c  getnameinfo.c  posixmodule.c  socketmodule.c  threadmodule.c  timemodule.c
Objects/: fileobject.c
Parser/: tokenizer.c
Python/: bootstrap_hash.c  ceval.c  fileutils.c  getcwd.c  import.c  pystate.c  pytime.c  random.c  thread.c  thread_vita.h
Sample/: README.md
Sample/simple/: CMakeLists.txt  main.c  ytdl.py
